--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import 'https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap';
+@import "https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap";
 * {
   margin: 0;
   padding: 0;
@@ -9,13 +9,20 @@
   font-family: Poppins;
 }
 
-*:hover, *:visited, *:active, *:target {
+*:hover,
+*:visited,
+*:active,
+*:target {
   color: inherit;
 }
 
+body {
+  background: hsl(40deg, 10%, 85%);
+}
+
 .navbar-container {
-  background: rgb(30, 20, 30);
-  color: hsl(40deg, 20%, 90%);
+  background: hsl(225deg, 20%, 10%);
+  color: hsl(40deg, 10%, 95%);
   padding: 1rem 2rem;
 }
 .navbar-container .navbar-wrapper .navbar {
@@ -30,7 +37,7 @@
 }
 .navbar-container .navbar-wrapper .navbar .navbar-logo h3 span {
   font-weight: 300;
-  border: 1px solid hsl(40deg, 20%, 90%);
+  border: 1px solid hsl(40deg, 10%, 95%);
   padding: 0 0.5ch;
 }
 .navbar-container .navbar-wrapper .navbar .navbar-links {
@@ -50,7 +57,7 @@
   bottom: -0.25rem;
   right: 50%;
   translate: 50% 0;
-  background: hsl(40deg, 20%, 90%);
+  background: hsl(40deg, 10%, 95%);
   transition: all 0.2s ease-in-out;
 }
 .navbar-container .navbar-wrapper .navbar .navbar-links li a:hover::after {
@@ -62,4 +69,61 @@
 .navbar-container .navbar-wrapper .navbar .navbar-links li a.active::after {
   background: hsl(220deg, 70%, 60%);
   width: 100%;
+}
+
+.user-cards {
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  gap: 1rem;
+  padding: 1rem 0.5rem;
+}
+.user-cards .user-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 10rem;
+  padding: 1rem;
+  box-shadow: 0px 10px 15px -2px rgba(0, 0, 0, 0.2);
+  background: hsl(40deg, 10%, 95%);
+  color: hsl(225deg, 20%, 10%);
+}
+.user-cards .user-card .user-info {
+  width: 100%;
+}
+.user-cards .user-card .user-info .user-name {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+.user-cards .user-card .user-info .user-username {
+  font-size: 0.75rem;
+}
+.user-cards .user-card .user-info .user-username::before {
+  content: "@";
+}
+.user-cards .user-card .user-cta {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  margin-top: 0.5rem;
+  margin-bottom: -0.5rem;
+}
+.user-cards .user-card .user-cta .user-email {
+  fill: hsl(225deg, 20%, 10%);
+}
+.user-cards .user-card .user-cta .user-email:hover {
+  fill: hsl(220deg, 70%, 60%);
+}
+.user-cards .user-card .user-cta button {
+  background: transparent;
+  stroke: hsl(225deg, 20%, 10%);
+  cursor: pointer;
+}
+.user-cards .user-card .user-cta button:hover {
+  stroke: hsl(220deg, 70%, 60%);
+}
+.user-cards .user-card .user-cta svg {
+  width: 1.25rem;
+  height: 1.25rem;
 }/*# sourceMappingURL=App.css.map */
