--- a/src/App.scss
+++ b/src/App.scss
@@ -1,76 +1,149 @@
 //import font
-@import 'https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap';
+@import "https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap";
 
 //default parameters
-$primary: hsl(40, 20, 90);
-$secondary: rgb(30, 20, 30);
+$primary: hsl(40, 10, 95);
+$primary-darker: hsl(40, 10, 85);
+$secondary: hsl(225, 20, 10);
+$secondary-lighter: hsl(225, 15%, 18%);
 $accent: hsl(220, 70, 60);
 
 //remove default style and set common properties
 * {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    box-sizing: border-box;
-    list-style: none;
-    text-decoration: none;
-    font-family: Poppins;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
+  font-family: Poppins;
 }
-*:hover, *:visited, *:active, *:target {
-    color: inherit;
+*:hover,
+*:visited,
+*:active,
+*:target {
+  color: inherit;
 }
 
+body{
+    background: $primary-darker;
+}
+
+//navbar
 .navbar-container {
-    background: $secondary;
-    color: $primary;
-    padding: 1rem 2rem;
-    .navbar-wrapper {
-        .navbar {
-            display: flex;
-            justify-content: space-between;
-            .navbar-logo {
-                cursor: pointer;
-                h3 {
-                    font-size: 1.5rem;
-                    span {
-                        font-weight: 300;
-                        border: 1px solid $primary;
-                        padding: 0 .5ch;
-                    }
+  background: $secondary;
+  color: $primary;
+  padding: 1rem 2rem;
+  .navbar-wrapper {
+    .navbar {
+      display: flex;
+      justify-content: space-between;
+      .navbar-logo {
+        cursor: pointer;
+        h3 {
+          font-size: 1.5rem;
+          span {
+            font-weight: 300;
+            border: 1px solid $primary;
+            padding: 0 0.5ch;
+          }
+        }
+      }
+      .navbar-links {
+        display: flex;
+        gap: 2ch;
+        align-items: center;
+        li a {
+          position: relative;
+          transition: all 0.2s ease-in-out;
+          &::after {
+            content: "";
+            position: absolute;
+            height: 0.25rem;
+            width: 0;
+            bottom: -0.25rem;
+            right: 50%;
+            translate: (50% 0);
+            background: $primary;
+            transition: all 0.2s ease-in-out;
+          }
+
+          &:hover {
+            &::after {
+              width: 33%;
+            }
+          }
+          &.active {
+            color: $accent;
+            &::after {
+              background: $accent;
+              width: 100%;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+//user list
+
+.user-cards {
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    gap: 1rem;
+    padding: 1rem .5rem;
+    .user-card {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 10rem;
+        padding: 1rem;
+        box-shadow: 0px 10px 15px -2px rgba(0,0,0,0.2);
+        background: $primary;
+        color: $secondary;
+        .user-info {
+            width: 100%;
+            .user-name {
+                overflow: hidden;
+                white-space: nowrap;
+                text-overflow: ellipsis;
+            }
+            .user-username{
+                font-size: .75rem;
+                &::before{
+                    content: '@';
                 }
             }
-            .navbar-links{
-                display: flex;
-                gap: 2ch;
-                align-items: center;
-                li a {
-                    position: relative;
-                    transition: all .2s ease-in-out;
-                    &::after {
-                        content: '';
-                        position: absolute;
-                        height: .25rem;
-                        width: 0;
-                        bottom: -.25rem;
-                        right: 50%;
-                        translate: (50% 0);
-                        background: $primary;
-                        transition: all .2s ease-in-out;
-                    }
+        }
+        .user-cta {
+            display: flex;
+            justify-content: space-between;
+            width: 100%;
+            margin-top: .5rem;
+            margin-bottom: -.5rem;
 
-                    &:hover {
-                        &::after{
-                            width: 33%;
-                        }
-                    }
-                    &.active {
-                        color: $accent;
-                        &::after{
-                            background: $accent;
-                            width: 100%;
-                        }
-                    }
+            .user-email {
+                fill: $secondary;
+                &:hover {
+                    fill: $accent;
                 }
+            }
+
+            button {
+                background: transparent;
+                stroke: $secondary;
+                cursor: pointer;
+
+                &:hover {
+                    stroke: $accent;
+                }
+            }
+
+            svg {
+                width: 1.25rem;
+                height: 1.25rem;
             }
         }
     }
