fix style on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,4 @@
 @import url(./style/userInfo.css);
 @import url(./style/about.css);
 @import url(./style/breakpoints.css);
+@import url(./style/animations.css);
