--- a/src/style/breakpoints.css
+++ b/src/style/breakpoints.css
@@ -36,13 +36,16 @@
     flex: 1 1;
   }
   .search-section .options-wrapper.show {
-    max-height: 5rem;
+    max-height: 7rem;
     pointer-events: all;
     min-width: 100%;
     margin-top: 1rem;
   }
 }
 @media only screen and (max-width: 480px) {
+  .landing-container, .about-container {
+    height: auto;
+  }
   .user-info-card {
     align-items: start !important;
   }
