--- a/src/style/home.css
+++ b/src/style/home.css
@@ -1,7 +1,6 @@
 .landing-container {
-  margin-top: -4rem;
   width: 100vw;
-  height: 100vh;
+  height: calc(100vh - 4rem);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -20,7 +19,7 @@
 }
 .landing-container .landing-wrapper .landing-header h1 {
   font-weight: 600;
-  font-size: clamp(3.5rem, 10vw - 1rem, 8rem);
+  font-size: clamp(3rem, 10vw - 1rem, 8rem);
   line-height: 1.5;
 }
 .landing-container .landing-wrapper .landing-header h1 span {
